test/trivial/shannon/multipleArgAssert.good
multipleArgAssert.chpl:4: error: assert failed - x = 10
